--- a/index.html
+++ b/index.html
@@ -4,16 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portofolio</title>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <nav class="navbar">
       <a href="#" class="logo">Portofolio</a>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Portofolio</a></li>
-      <li><a href="#">Service</a></li>
-      <li><a href="#">Contact</a></li>
+      <ul>
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Album</a></li>
+        <li><a href="#">Service</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
     </nav>
+
+    <section class="home">
+      <div class="home-info">
+        <h1>Rayhan Faiz Adzikra</h1>
+        <h2>I'm a student at Pasundan University</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi
+          quis, esse laboriosam itaque eligendi quisquam officia ea ullam
+          perferendis aut eos beatae, numquam dignissimos porro magni nam
+          dolorem? Possimus, amet.
+        </p>
+        <div class="btn-sci">
+          <a href="#" class="btn">Download CV</a>
+          <div class="sci">
+            <a href="#"><i class="bx bxl-github"></i></a>
+            <a href="#"><i class="bx bxl-instagram"></i></a>
+            <a href="#"><i class="bx bxl-whatsapp"></i></a>
+            <a href="#"><i class="bx bxl-facebook-square"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="home-img">
+        <div class="img-box">
+          <div class="img-item">
+            <img src="img/home.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
