--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
       </ul>
     </nav>
 
+    <div class="bars-animation">
+      <div class="bar" style="--i:6"></div>
+      <div class="bar" style="--i:5"></div>
+      <div class="bar" style="--i:4"></div>
+      <div class="bar" style="--i:3"></div>
+      <div class="bar" style="--i:2"></div>
+      <div class="bar" style="--i:1"></div>
+    </div>
+
     <section class="home">
       <div class="home-info">
         <h1>Rayhan Faiz Adzikra</h1>
@@ -46,7 +55,7 @@
       <div class="home-img">
         <div class="img-box">
           <div class="img-item">
-            <img src="img/home.png" alt="">
+            <img src="img/home.png" alt="" />
           </div>
         </div>
       </div>
