--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
     <section class="home">
       <div class="home-info">
         <h1>Rayhan Faiz Adzikra</h1>
-        <h2>I'm a student at Pasundan University</h2>
+        <h2>I'm a 
+          <span style="--i:4" data-text="student at Pasundan University">student at Pasundan University</span>
+          <span style="--i:3" data-text="informatics engineering student">informatics engineering student</span>
+          <span style="--i:2" data-text="first semester student">first semester student</span>
+          <span style="--i:1" data-text="volleyball player">volleyball player</span>
+        </h2>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi
           quis, esse laboriosam itaque eligendi quisquam officia ea ullam
