--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <a href="#" class="logo">Portofolio</a>
       <ul>
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Album</a></li>
-        <li><a href="#">Service</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Resume</a></li>
+        <li><a href="#">Portifolio</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
@@ -65,5 +65,66 @@
         </div>
       </div>
     </section>
+
+    <section class="services active">
+      <h2 class="heading">My <span>Services</span></h2>
+      <div class="services-container">
+        <div class="services-box">
+          <div class="icon">
+            <i class='bx bx-code-alt'></i>
+            <a href="#"><i class='bx bx-arrow-back'></i></a>
+          </div>
+          <h3>Web Development</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem consectetur reiciendis vel nobis id velit. Fuga molestiae ad eveniet non quam harum nobis voluptatibus, est inventore accusamus. Rem, fugiat id?</p>
+        </div>
+
+        <div class="services-box">
+          <div class="icon">
+            <i class='bx bxs-paint'></i>
+            <a href="#"><i class='bx bx-arrow-back'></i></a>
+          </div>
+          <h3>UI/UX Design</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem consectetur reiciendis vel nobis id velit. Fuga molestiae ad eveniet non quam harum nobis voluptatibus, est inventore accusamus. Rem, fugiat id?</p>
+        </div>
+
+        <div class="services-box">
+          <div class="icon">
+            <i class='bx bx-palette'></i>
+            <a href="#"><i class='bx bx-arrow-back'></i></a>
+          </div>
+          <h3>Graphic Design</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem consectetur reiciendis vel nobis id velit. Fuga molestiae ad eveniet non quam harum nobis voluptatibus, est inventore accusamus. Rem, fugiat id?</p>
+        </div>
+
+        <div class="services-box">
+          <div class="icon">
+            <i class='bx bx-trending-up'></i>
+            <a href="#"><i class='bx bx-arrow-back'></i></a>
+          </div>
+          <h3>SEO</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem consectetur reiciendis vel nobis id velit. Fuga molestiae ad eveniet non quam harum nobis voluptatibus, est inventore accusamus. Rem, fugiat id?</p>
+        </div>
+
+        <div class="services-box">
+          <div class="icon">
+            <i class='bx bx-slideshow'></i>
+            <a href="#"><i class='bx bx-arrow-back'></i></a>
+          </div>
+          <h3>Video Editing</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem consectetur reiciendis vel nobis id velit. Fuga molestiae ad eveniet non quam harum nobis voluptatibus, est inventore accusamus. Rem, fugiat id?</p>
+        </div>
+
+        <div class="services-box">
+          <div class="icon">
+            <i class='bx bx-camera'></i>
+            <a href="#"><i class='bx bx-arrow-back'></i></a>
+          </div>
+          <h3>Photography</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem consectetur reiciendis vel nobis id velit. Fuga molestiae ad eveniet non quam harum nobis voluptatibus, est inventore accusamus. Rem, fugiat id?</p>
+        </div>
+
+      </div>
+    </section>
+
   </body>
 </html>
