--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
           <h3>Web Development</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem consectetur reiciendis vel nobis id velit. Fuga molestiae ad eveniet non quam harum nobis voluptatibus, est inventore accusamus. Rem, fugiat id?</p>
         </div>
+        </div>
 
         <div class="services-box">
           <div class="icon">
