--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="#" class="logo">Portofolio</a>
       <ul>
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Services</a></li>
+        <li class="services"><a href="#">Services</a></li>
         <li><a href="#">Resume</a></li>
         <li><a href="#">Portifolio</a></li>
         <li><a href="#">Contact</a></li>
@@ -55,12 +55,12 @@
             <a href="#"><i class="bx bxl-facebook-square"></i></a>
           </div>
         </div>
-      </div>
+        </div>
 
       <div class="home-img">
         <div class="img-box">
           <div class="img-item">
-            <img src="img/home.png" alt="" />
+            <img src="img/home.png" alt=""/>
           </div>
         </div>
       </div>
