--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <section class="services active">
       <h2 class="heading">My <span>Services</span></h2>
-      <div class="services-container">
+      <div class="services-container"></div>
         <div class="services-box">
           <div class="icon">
             <i class='bx bx-code-alt'></i>
