--- a/index.html
+++ b/index.html
@@ -132,15 +132,96 @@
       </div>
 
       <div class="resume-box">
-        <div class="resume-detail experience">
+        <div class="resume-detail experience active">
           <h2 class="heading">My <span>Experience</span></h2>
           <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim possimus, nobis earum soluta unde consectetur consequatur voluptatibus natus. Quisquam, excepturi!</p>
+          <div class="resume-list">
+            <div class="resume-item">
+              <p class="year">2023 - Present</p>
+              <h3>Fronted Developer</h3>
+              <p class="company">Abc Corp.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, similique.</p>
+            </div>
+
+            <div class="resume-item">
+              <p class="year">2022 - 2023</p>
+              <h3>Full Stack Developer</h3>
+              <p class="company">Google</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, similique.</p>
+            </div>
+
+            <div class="resume-item">
+              <p class="year">2021 - 2022</p>
+              <h3>Backend Developer</h3>
+              <p class="company">Youtube</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, similique.</p>
+            </div>
+
+            <div class="resume-item">
+              <p class="year">2020 - 2021</p>
+              <h3>Fronted Developer</h3>
+              <p class="company">Xyz Inc.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, similique.</p>
+            </div>
+
+            <div class="resume-item">
+              <p class="year">2019 - 2020</p>
+              <h3>UI/UX Designer</h3>
+              <p class="company">Abc Inc.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, similique.</p>
+            </div>
+
+            <div class="resume-item">
+              <p class="year">2018 - 2019</p>
+              <h3>Junior Developer</h3>
+              <p class="company">Xyz Corp.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, similique.</p>
+            </div>
+
+          </div>
         </div>
         
         <div class="resume-box">
           <div class="resume-detail education">
             <h2 class="heading">My <span>Education</span></h2>
             <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim possimus, nobis earum soluta unde consectetur consequatur voluptatibus natus. Quisquam, excepturi!</p>
+            <div class="resume-list">
+              <div class="resume-item">
+                <p class="year">2024</p>
+                <h3>Programing Course</h3>
+                <p class="company">Online Course</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, facere.</p>
+              </div>
+
+              <div class="resume-item">
+                <p class="year">2022 - 2023</p>
+                <h3>Web Development Bootcamp</h3>
+                <p class="company">Online Course Platform</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, facere.</p>
+              </div>
+
+              <div class="resume-item">
+                <p class="year">2020</p>
+                <h3>Certified Web Development</h3>
+                <p class="company">Online Course</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, facere.</p>
+              </div>
+
+              <div class="resume-item">
+                <p class="year">2017 - 2018</p>
+                <h3>Program Web</h3>
+                <p class="company">Online Course</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, facere.</p>
+              </div>
+
+              <div class="resume-item">
+                <p class="year">2015-2016</p>
+                <h3>Software Development</h3>
+                <p class="company">Online Course</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, facere.</p>
+              </div>
+
+            </div>
           </div>
 
           <div class="resume-box">
