--- a/index.html
+++ b/index.html
@@ -221,6 +221,13 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, facere.</p>
               </div>
 
+              <div class="resume-item">
+                <p class="year">2014-2015</p>
+                <h3>Network Engineer</h3>
+                <p class="company">Online Course</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, facere.</p>
+              </div>
+
             </div>
           </div>
 
@@ -228,6 +235,40 @@
             <div class="resume-detail skills">
               <h2 class="heading">My <span>Skills</span></h2>
               <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim possimus, nobis earum soluta unde consectetur consequatur voluptatibus natus. Quisquam, excepturi!</p>
+              <div class="resume-list">
+                <div class="resume-item">
+                  <i class='bx bxl-html5' ></i>
+                  <span>HTML5</span>
+                </div>
+                <div class="resume-item">
+                  <i class='bx bxl-css3' ></i>
+                  <span>CSS3</span>
+                </div>
+                <div class="resume-item">
+                  <i class='bx bxl-javascript' ></i>
+                  <span>JavaScript</span>
+                </div>
+                <div class="resume-item">
+                  <i class='bx bxl-react' ></i>
+                  <span>React.js</span>
+                </div>
+                <div class="resume-item">
+                  <i class='bx bxl-vuejs' ></i>
+                  <span>Vue.js</span>
+                </div>
+                <div class="resume-item">
+                  <i class='bx bxl-tailwind-css' ></i>
+                  <span>Tailwind CSS</span>
+                </div>
+                <div class="resume-item">
+                  <i class='bx bxl-nodejs' ></i>
+                  <span>Node.js</span>
+                </div>
+                <div class="resume-item">
+                  <i class='bx bxl-mongodb' ></i>
+                  <span>MongoDB</span>
+                </div>
+              </div>
             </div>
 
             <div class="resume-box">
