--- a/index.html
+++ b/index.html
@@ -274,7 +274,33 @@
             <div class="resume-box">
               <div class="resume-detail about">
                 <h2 class="heading">About <span>Me</span></h2>
-                <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim possimus, nobis earum soluta unde consectetur consequatur voluptatibus natus. Quisquam, excepturi!</p>
+                <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim possimus, nobis earum soluta unde consectetur consequatur voluptatibus natus. Quisquam, excepturi.</p>
+                <div class="resume-list">
+                  <div class="resume-item">
+                    <p>Name<span>Rayhan Faiz Adzikra</span></p>
+                  </div>
+                  <div class="resume-item">
+                    <p>Gender<span>Male</span></p>
+                  </div>
+                  <div class="resume-item">
+                    <p>Age<span>18 Years Old</span></p>
+                  </div>
+                  <div class="resume-item">
+                    <p>Place and Date Of Birthday<span>Desember 26, 2006</span></p>
+                  </div>
+                  <div class="resume-item">
+                    <p>Religion<span>Islam</span></p>
+                  </div>
+                  <div class="resume-item">
+                    <p>Residence<span>Kuningan</span></p>
+                  </div>
+                  <div class="resume-item">
+                    <p>Status<span>Single</span></p>
+                  </div>
+                  <div class="resume-item">
+                    <p>Hobby<span>Volleyball & Karate</span></p>
+                  </div>
+                </div>
               </div>
           
         </div>
