--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="#" class="active">Home</a>
       <a href="#">Services</a>
       <a href="#">Resume</a>
-      <a href="#">Portofolio</a>
+      <a href="#">Hobby</a>
       <a href="#">Contact</a>
     </nav>
   </header>
@@ -120,7 +120,7 @@
     </div>
   </section>
 
-  <section class="resume active">
+  <section class="resume">
     <div class="resume-container">
       <div class="resume-box">
         <h2>Why Hire Me?</h2>
@@ -298,7 +298,7 @@
                     <p>Status<span>Single</span></p>
                   </div>
                   <div class="resume-item">
-                    <p>Hobby<span>Volleyball & Karate</span></p>
+                    <p>Hobby<span>Volleyball, Football & Karate</span></p>
                   </div>
                 </div>
               </div>
@@ -308,7 +308,17 @@
     </div>
   </section>
 
-<script src="js/script.js"></script>
+  <section class="hobby active">
+    <h2 class="heading">My <span>Hobby</span></h2>
+    <div class="hobby-main">
+      <img src="img/hobby1.jpg">
+      <img src="img/hobby2.jpg">
+      <img src="img/hobby5.jpg">
+      <img src="img/hobby6.jpg">
+    </div>
+  </section>
 
+
+<script src="js/script.js"></script>
 </body>
 </html>
