--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="active">
     <a href="#" class="logo">Rayhan</a>
 
-    <i class='bx bx-menu' id="menu-icon"></i>"
+    <i class='bx bx-menu' id="menu-icon"></i>
 
     <nav>
       <a href="#" class="active">Home</a>
